--- a/app/components/index/main-category-block.html
+++ b/app/components/index/main-category-block.html
@@ -3,49 +3,145 @@
         <h3>Категории товаров</h3>
         <a>Перейти в каталог техники</a>
     </div>
-    <div class="main-category__card-helper__wrapper">
-        <div class="main-category__card-helper">
-            <div class="main-category__card-opacity"></div>
-            <div class="main-category__card-list">
-                <a href="" class="main-category__card">
-                    <img src="../../img/card/2.png" alt="">
-                    <p class="">Триплексные насосы</p>
-                </a>
-                <a href="" class="main-category__card">
-                    <img src="../../img/card/3.png" alt="">
-                    <p class="">Триплексные насосы</p>
-                </a>
-                <a href="" class="main-category__card">
-                    <img src="../../img/card/1.png" alt="">
-                    <p class="">Триплексные насосы</p>
-                </a>
-                <a href="" class="main-category__card">
-                    <img src="../../img/card/4.png" alt="">
-                    <p class="">Триплексные насосы</p>
-                </a>
-                <a href="" class="main-category__card">
-                    <img src="../../img/card/1.png" alt="">
-                    <p class="">Триплексные насосы</p>
-                </a>
-                <a href="" class="main-category__card">
-                    <img src="../../img/card/5.png" alt="">
-                    <p class="">Триплексные насосы</p>
-                </a>
-                <a href="" class="main-category__card">
-                    <img src="../../img/card/1.png" alt="">
-                    <p class="">Триплексные насосы</p>
-                </a>
-                <a href="" class="main-category__card">
-                    <img src="../../img/card/1.png" alt="">
-                    <p class="">Триплексные насосы</p>
-                </a>
-                <a href="" class="main-category__card">
-                    <img src="../../img/card/1.png" alt="">
-                    <p class="">Триплексные насосы</p>
-                </a>
+    <div class="swiper">
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+            <!-- Slides -->
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/2.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/3.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/1.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/2.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/3.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/1.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/2.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/3.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/1.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/2.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/3.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/1.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/2.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/3.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/1.png" alt="">
+                <p class="">Триплексные насосы</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/2.png" alt="">
+                <p class="">Триплексные насосы1</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/3.png" alt="">
+                <p class="">Триплексные насосы2</p>
+            </a>
+            <a href="" class="swiper-slide main-category__card">
+                <img src="../../img/card/1.png" alt="">
+                <p class="">Триплексные насосы3</p>
+            </a>
 
-            </div>
         </div>
+
+        <!-- If we need scrollbar -->
+        <div class="swiper-scrollbar"></div>
     </div>
+
     <a class="main-category__button">Перейти в каталог категорий</a>
 </section>
+
+<style>
+    .swiper {
+        width: 100%;
+        height: 300px;
+    }
+    .swiper-scrollbar-drag {
+        background-color: #D82329;
+    }
+</style>
+
+<script type="module">
+    import Swiper from 'https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.esm.browser.min.js'
+
+    const swiper = new Swiper('.swiper', {
+        // Optional parameters
+        direction: 'horizontal',
+        loop: false,
+
+        // If we need pagination
+        pagination: {
+            el: '.swiper-pagination',
+        },
+
+        // Navigation arrows
+        navigation: {
+            nextEl: '.swiper-button-next',
+            prevEl: '.swiper-button-prev',
+        },
+
+        // And if we need scrollbar
+        scrollbar: {
+            el: '.swiper-scrollbar',
+        },
+        breakpoints: {
+            560: {
+                slidesPerView: 2,
+                spaceBetween: 30
+            },
+            // when window width is >= 320px
+            873: {
+                slidesPerView: 3,
+                spaceBetween: 30
+            },
+            // when window width is >= 480px
+            1210: {
+                slidesPerView: 4,
+                spaceBetween: 40
+            },
+            // when window width is >= 640px
+            1660: {
+                slidesPerView: 5,
+                spaceBetween: 50
+            }
+        }
+    });
+</script>
