--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -535,7 +535,7 @@
     }
 
     &__card {
-      display: flex;
+      display: flex !important;
       flex-direction: column;
       align-items: center;
       position: relative;
