--- a/app/components/index/about-company-block.html
+++ b/app/components/index/about-company-block.html
@@ -81,7 +81,7 @@
 
         <img class="main-about__doc"src="img/about/01.png" alt="">
 
-    <div class="main-about__info">
+    <div id="about" class="main-about__info">
         <div class="main-about__title">О компании</div>
         <div class="main-about__name">«ООО БУРОВЫЕ ТЕХНОЛОГИИ»</div>
         <div class="main-about__text">
