--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -610,6 +610,12 @@
     background-position: center top;
     background-repeat: no-repeat;
     background-color: rgba(black, 0.87);
+
+    background-size: 100%;
+    -moz-background-size: 100%; /* Firefox 3.6+ */
+    -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
+    -o-background-size: 100%; /* Opera 9.6+ */
+
     position: unset;
     width: 100%;
     height: 1152px;
