--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -318,6 +318,7 @@
         position: absolute;
         border: 1px solid #B3B3B3;
         width: 100%;
+        min-width: 80vw;
         left: 0;
         top: 0;
         right: 0;
