--- a/app/scss/product-catalog-about.scss
+++ b/app/scss/product-catalog-about.scss
@@ -63,12 +63,17 @@
   background: #FFFFFF;
   box-shadow: 4px 4px 20px 10px rgba(210, 210, 210, 0.25);
 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
   @include transition();
   &:hover {
     @include transform()
   }
 
   &__img {
+    flex: 1;
     margin-bottom: 36px;
     width: 200px;
     max-height: 300px;
