--- a/app/components/modal.html
+++ b/app/components/modal.html
@@ -27,7 +27,7 @@
             </div>
             <div class="popup__item">
                 <p class="popup__helper-text">
-                    Нажимая на кнопку, Вы принимаете Положение и Согласие на обработку персональных данных
+                    Нажимая на кнопку «Оставить заявку», Вы принимаете Положение и Согласие на обработку персональных данных
                 </p>
             </div>
         </div>
